--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "lightning>=2.4.0",
     "loguru>=0.7.2",
     "matplotlib>=3.9.2",
-    "numpy==1.26.0",
+    "numpy>=1.26.0",
     "pytest>=8.3.3",
     "rich>=13.9.2",
     "rootutils>=1.0.7",
