--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "tensorboard>=2.18.0",
     "timm>=1.0.9",
-    "torch==2.2.2",
+    "torch",
     "torchmetrics>=1.4.2",
     "torchvision>=0.17.2",
     "typing-extensions>=4.12.2",
