--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "tensorboard>=2.18.0",
     "timm>=1.0.9",
-    "torch",
+    "torch<2.3.0",
     "torchmetrics",
     "torchvision>=0.17.2",
     "coverage==7.4.0",
