--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "lightning>=2.4.0",
     "loguru>=0.7.2",
     "matplotlib>=3.9.2",
-    "numpy>=1.26.0",
+    "numpy==1.26.0",
     "pytest>=8.3.3",
     "rich>=13.9.2",
     "rootutils>=1.0.7",
@@ -20,9 +20,10 @@ dependencies = [
     "seaborn>=0.13.2",
     "tensorboard>=2.18.0",
     "timm>=1.0.9",
-    "torch<2.3.0",
-    "torchmetrics",
+    "torch==2.2.2",
+    "torchmetrics>=1.4.2",
     "torchvision>=0.17.2",
+    "typing-extensions>=4.12.2",
     "coverage==7.4.0",
     "dvc>=3.55.2",
     "dvc-gdrive>=3.0.1",
